[package]
name = "rt"
version = "0.1.0"
edition = "2021"
build = "src/ui/build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
slint = "1.12.1"
rodio = "0.17"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
lazy_static = "1.5.0"
rand = "0.9.2"
libc = "0.2.178"

[build-dependencies]
slint-build = "1.12.1"
